client simulator by vert.x

--- a/pom.xml
+++ b/pom.xml
@@ -72,6 +72,12 @@
                 <artifactId>commons-lang3</artifactId>
                 <version>3.7</version>
             </dependency>
+            <!-- https://mvnrepository.com/artifact/io.vertx/vertx-core -->
+            <dependency>
+                <groupId>io.vertx</groupId>
+                <artifactId>vertx-core</artifactId>
+                <version>3.5.2</version>
+            </dependency>
 
 
         </dependencies>
