--- a/xpns-server/src/main/resources/xpns-server.properties
+++ b/xpns-server/src/main/resources/xpns-server.properties
@@ -1,6 +1,15 @@
 #xpns-server
-server.clientPort=8080
+server.port=8080
+server.max.clients=10
+server.api.host=127.0.0.1
+server.api.port=9090
+server.client.netty.threads=4
+server.api.netty.threads=2
+#redis
+redis.host=127.0.0.1
+redis.port=6379
 #kafka
+kafka.bootstrap.server=localhost:9092
 kafka.group.id=xpns-server
 kafka.enable.auto.commit=true
 kafka.session.timeout.ms=4000
