--- a/xpns-server/src/main/resources/xpns-server.properties
+++ b/xpns-server/src/main/resources/xpns-server.properties
@@ -1,10 +1,11 @@
 #xpns-server
 server.port=8080
 server.max.clients=10
-server.api.host=127.0.0.1
+server.api.host=0.0.0.0
 server.api.port=9090
 server.client.netty.threads=4
 server.api.netty.threads=2
+server.worker.threads=4
 #redis
 redis.host=127.0.0.1
 redis.port=6379
