add logging, fix bug of remove client session in redis

--- a/pom.xml
+++ b/pom.xml
@@ -19,6 +19,7 @@
         <module>xpns-client</module>
         <module>xpns-soa</module>
         <module>xpns-dispatcher</module>
+        <module>xpns-server-vertx</module>
     </modules>
 
     <properties>
