disptcher is ready to consume notification task and send to xpns server

--- a/xpns-dispatcher/pom.xml
+++ b/xpns-dispatcher/pom.xml
@@ -33,6 +33,10 @@
             <groupId>io.vertx</groupId>
             <artifactId>vertx-kafka-client</artifactId>
         </dependency>
+        <dependency>
+            <groupId>io.vertx</groupId>
+            <artifactId>vertx-redis-client</artifactId>
+        </dependency>
     </dependencies>
 
     <!-- Package as an executable jar -->
