--- a/xpns-dispatcher/src/main/resources/app.properties
+++ b/xpns-dispatcher/src/main/resources/app.properties
@@ -1,7 +1,7 @@
 #kafka consumer
 kafka.consumer.bootstrap.servers=localhost:9092
-kafka.consumer.key.deserializer=org.apache.kafka.common.serialization.Deserializer
-kafka.consumer.value.deserializer=org.apache.kafka.common.serialization.Deserializer
+kafka.consumer.key.deserializer=org.apache.kafka.common.serialization.StringDeserializer
+kafka.consumer.value.deserializer=org.apache.kafka.common.serialization.StringDeserializer
 kafka.consumer.group.id=dispatcher
 kafka.consumer.auto.offset.reset=earliest
 kafka.consumer.enable.auto.commit=false
@@ -13,3 +13,5 @@ kafka.producer.acks=1
 #topics
 kafka-notification-topic=xpns-notification
 kafka-ack-topic=xpns-ack
+#zookeeper
+zookeeper.servers=localhost:2181
