--- a/pom.xml
+++ b/pom.xml
@@ -32,6 +32,8 @@
         <netty.version>4.1.24.Final</netty.version>
         <slf4j.version>1.7.25</slf4j.version>
         <logback-classic.version>1.2.3</logback-classic.version>
+        <vertx.version>3.5.2</vertx.version>
+        <zookeeper.version>3.4.11</zookeeper.version>
     </properties>
 
     <dependencyManagement>
@@ -77,15 +79,24 @@
             <dependency>
                 <groupId>io.vertx</groupId>
                 <artifactId>vertx-core</artifactId>
-                <version>3.5.2</version>
+                <version>${vertx.version}</version>
             </dependency>
             <!-- https://mvnrepository.com/artifact/io.vertx/vertx-kafka-client -->
             <dependency>
                 <groupId>io.vertx</groupId>
                 <artifactId>vertx-kafka-client</artifactId>
-                <version>3.5.2</version>
+                <version>${vertx.version}</version>
             </dependency>
-
+            <dependency>
+                <groupId>io.vertx</groupId>
+                <artifactId>vertx-redis-client</artifactId>
+                <version>${vertx.version}</version>
+            </dependency>
+            <dependency>
+                <groupId>org.apache.zookeeper</groupId>
+                <artifactId>zookeeper</artifactId>
+                <version>${zookeeper.version}</version>
+            </dependency>
 
         </dependencies>
     </dependencyManagement>
