--- a/xpns-client/pom.xml
+++ b/xpns-client/pom.xml
@@ -29,6 +29,10 @@
             <groupId>org.apache.commons</groupId>
             <artifactId>commons-lang3</artifactId>
         </dependency>
+        <dependency>
+            <groupId>io.vertx</groupId>
+            <artifactId>vertx-redis-client</artifactId>
+        </dependency>
     </dependencies>
 
     <!-- Package as an executable jar -->
