--- a/xpns-server/pom.xml
+++ b/xpns-server/pom.xml
@@ -60,6 +60,11 @@
             <version>3.10.0</version>
             <scope>test</scope>
         </dependency>
+        <!-- https://mvnrepository.com/artifact/org.apache.zookeeper/zookeeper -->
+        <dependency>
+            <groupId>org.apache.zookeeper</groupId>
+            <artifactId>zookeeper</artifactId>
+        </dependency>
 
 
     </dependencies>
