vertx is ready to send ack to kafka

--- a/xpns-server-vertx/src/main/resources/app.properties
+++ b/xpns-server-vertx/src/main/resources/app.properties
@@ -10,11 +10,13 @@ server.worker.threads=4
 redis.host=127.0.0.1
 redis.port=6379
 #kafka
-kafka.bootstrap.server=localhost:9092
-kafka.group.id=xpns-server
-kafka.enable.auto.commit=true
-kafka.session.timeout.ms=4000
-kafka.auto.commit.interval.ms=1000
-kafka.auto.offset.reset=smallest
-kafka.key.deserializer=org.apache.kafka.common.serialization.StringDeserializer
-kafka.value.deserializer=org.apache.kafka.common.serialization.StringDeserializer
+#kafka producer
+kafka.producer.bootstrap.servers=localhost:9092
+kafka.producer.key.serializer=org.apache.kafka.common.serialization.StringSerializer
+kafka.producer.value.serializer=org.apache.kafka.common.serialization.StringSerializer
+kafka.producer.acks=1
+#topics
+kafka-notification-topic=xpns-notification
+kafka-ack-topic=xpns-ack
+#zookeeper
+zookeeper.servers=localhost:2181
