xpns es writer is ready

--- a/xpns-soa/src/main/resources/app.properties
+++ b/xpns-soa/src/main/resources/app.properties
@@ -5,3 +5,4 @@ kafka.producer.value.serializer=org.apache.kafka.common.serialization.StringSeri
 kafka.producer.acks=1
 #topics
 kafka-notification-topic=xpns-notification
+kafka-es=xpns-es
