--- a/pom.xml
+++ b/pom.xml
@@ -20,6 +20,7 @@
         <module>xpns-soa</module>
         <module>xpns-dispatcher</module>
         <module>xpns-server-vertx</module>
+        <module>xpns-es</module>
     </modules>
 
     <properties>
