--- a/xpns-es/src/main/resources/app.properties
+++ b/xpns-es/src/main/resources/app.properties
@@ -5,14 +5,11 @@ kafka.consumer.value.deserializer=org.apache.kafka.common.serialization.StringDe
 kafka.consumer.group.id=dispatcher
 kafka.consumer.auto.offset.reset=earliest
 kafka.consumer.enable.auto.commit=false
-#kafka producer
-kafka.producer.bootstrap.servers=localhost:9092
-kafka.producer.key.serializer=org.apache.kafka.common.serialization.StringSerializer
-kafka.producer.value.serializer=org.apache.kafka.common.serialization.StringSerializer
-kafka.producer.acks=1
 #topics
 kafka-notification-topic=xpns-notification
 kafka-ack-topic=xpns-ack
 kafka-es=xpns-es
-#zookeeper
-zookeeper.servers=localhost:2181
+#elasticsearch api
+elasticsearch.url=http://localhost:9200
+#server
+server.instances=1
