add notification trace to elasticsearch

--- a/xpns-es/src/main/resources/app.properties
+++ b/xpns-es/src/main/resources/app.properties
@@ -2,7 +2,7 @@
 kafka.consumer.bootstrap.servers=localhost:9092
 kafka.consumer.key.deserializer=org.apache.kafka.common.serialization.StringDeserializer
 kafka.consumer.value.deserializer=org.apache.kafka.common.serialization.StringDeserializer
-kafka.consumer.group.id=dispatcher
+kafka.consumer.group.id=es-writer
 kafka.consumer.auto.offset.reset=earliest
 kafka.consumer.enable.auto.commit=false
 #topics
