--- a/xpns-server/src/main/resources/app.properties
+++ b/xpns-server/src/main/resources/app.properties
@@ -9,6 +9,7 @@ server.worker.threads=4
 #redis
 redis.host=127.0.0.1
 redis.port=6379
+redis.password=
 #kafka producer
 kafka.producer.bootstrap.servers=localhost:9092
 kafka.producer.key.serializer=org.apache.kafka.common.serialization.StringSerializer
