save offline notification to hbase and do resend while targets re-connect to xpns server

--- a/xpns-dispatcher/src/main/resources/app.properties
+++ b/xpns-dispatcher/src/main/resources/app.properties
@@ -10,11 +10,14 @@ kafka.producer.bootstrap.servers=localhost:9092
 kafka.producer.key.serializer=org.apache.kafka.common.serialization.StringSerializer
 kafka.producer.value.serializer=org.apache.kafka.common.serialization.StringSerializer
 kafka.producer.acks=1
-#topics
+#topics]
 kafka-notification-topic=xpns-notification
 kafka-ack-topic=xpns-ack
-kafka-es=xpns-es
+kafka-es-topic=xpns-es
+kafka-logon-topic=xpns-logon
 #zookeeper
 zookeeper.servers=localhost:2181
 #server
 server.instances=1
+#hbase
+hbase.phoenix.url=jdbc:phoenix:localhost:2181:/hbase
