--- a/xpns-server/src/main/resources/app.properties
+++ b/xpns-server/src/main/resources/app.properties
@@ -18,5 +18,6 @@ kafka.producer.acks=1
 #topics
 kafka-notification-topic=xpns-notification
 kafka-ack-topic=xpns-ack
+kafka-logon-topic=xpns-logon
 #zookeeper
 zookeeper.servers=localhost:2181
