optimize logging, performance

--- a/xpns-es/src/main/resources/app.properties
+++ b/xpns-es/src/main/resources/app.properties
@@ -8,7 +8,7 @@ kafka.consumer.enable.auto.commit=false
 #topics
 kafka-notification-topic=xpns-notification
 kafka-ack-topic=xpns-ack
-kafka-es=xpns-es
+kafka-es-topic=xpns-es
 #elasticsearch api
 elasticsearch.url=http://localhost:9200
 #server
