--- a/xpns-soa/src/main/resources/app.properties
+++ b/xpns-soa/src/main/resources/app.properties
@@ -3,6 +3,7 @@ kafka.producer.bootstrap.servers=localhost:9092
 kafka.producer.key.serializer=org.apache.kafka.common.serialization.StringSerializer
 kafka.producer.value.serializer=org.apache.kafka.common.serialization.StringSerializer
 kafka.producer.acks=1
+kafka.producer.type=async
 #topics
 kafka-notification-topic=xpns-notification
-kafka-es=xpns-es
+kafka-es-topic=xpns-es
