--- a/xpns-dispatcher/src/main/resources/app.properties
+++ b/xpns-dispatcher/src/main/resources/app.properties
@@ -10,6 +10,7 @@ kafka.producer.bootstrap.servers=localhost:9092
 kafka.producer.key.serializer=org.apache.kafka.common.serialization.StringSerializer
 kafka.producer.value.serializer=org.apache.kafka.common.serialization.StringSerializer
 kafka.producer.acks=1
+kafka.producer.type=async
 #topics]
 kafka-notification-topic=xpns-notification
 kafka-ack-topic=xpns-ack
