--- a/xpns-server-vertx/src/main/resources/app.properties
+++ b/xpns-server-vertx/src/main/resources/app.properties
@@ -15,8 +15,10 @@ kafka.producer.bootstrap.servers=localhost:9092
 kafka.producer.key.serializer=org.apache.kafka.common.serialization.StringSerializer
 kafka.producer.value.serializer=org.apache.kafka.common.serialization.StringSerializer
 kafka.producer.acks=1
+kafka.producer.type=async
 #topics
 kafka-notification-topic=xpns-notification
 kafka-ack-topic=xpns-ack
+kafka-logon-topic=xpns-logon
 #zookeeper
 zookeeper.servers=localhost:2181
