--- a/pom.xml
+++ b/pom.xml
@@ -21,6 +21,7 @@
         <module>xpns-dispatcher</module>
         <module>xpns-server-vertx</module>
         <module>xpns-es</module>
+        <module>xpns-server-akka</module>
     </modules>
 
     <properties>
@@ -110,5 +111,19 @@
 
         </dependencies>
     </dependencyManagement>
+
+    <build>
+        <plugins>
+            <plugin>
+                <groupId>org.apache.maven.plugins</groupId>
+                <artifactId>maven-compiler-plugin</artifactId>
+                <version>3.5.1</version>
+                <configuration>
+                    <source>1.8</source>
+                    <target>1.8</target>
+                </configuration>
+            </plugin>
+        </plugins>
+    </build>
 
 </project>
