--- a/xpns-server-akka/src/main/resources/application.conf
+++ b/xpns-server-akka/src/main/resources/application.conf
@@ -2,4 +2,26 @@ akka {
   loggers = ["akka.event.slf4j.Slf4jLogger"]
   loglevel = "DEBUG"
   logging-filter = "akka.event.slf4j.Slf4jLoggingFilter"
+
+  akka.kafka.producer {
+    # Tuning parameter of how many sends that can run in parallel.
+    parallelism = 100
+
+    # How long to wait for `KafkaProducer.close`
+    close-timeout = 60s
+
+    # Fully qualified config path which holds the dispatcher configuration
+    # to be used by the producer stages. Some blocking may occur.
+    # When this value is empty, the dispatcher configured for the stream
+    # will be used.
+    use-dispatcher = "akka.kafka.default-dispatcher"
+
+    # The time interval to commit a transaction when using the `Transactional.sink` or `Transactional.flow`
+    eos-commit-interval = 100ms
+
+    # Properties defined by org.apache.kafka.clients.producer.ProducerConfig
+    # can be defined in this configuration section.
+    kafka-clients {
+    }
+  }
 }
