bench mark through http service

--- a/pom.xml
+++ b/pom.xml
@@ -22,6 +22,7 @@
         <module>xpns-server-vertx</module>
         <module>xpns-es</module>
         <module>xpns-server-akka</module>
+        <module>xpns-bench-soa</module>
     </modules>
 
     <properties>
