use mysql instead of hbase

--- a/xpns-dispatcher/src/main/resources/app.properties
+++ b/xpns-dispatcher/src/main/resources/app.properties
@@ -22,3 +22,19 @@ zookeeper.servers=localhost:2181
 server.instances=1
 #hbase
 hbase.phoenix.url=jdbc:phoenix:localhost:2181:/hbase
+hbase.zookeeper.quorum=localhost
+hbase.cluster.distributed=true
+hbase.hconnection.threads.max=20
+hbase.hconnection.threads.core=2
+hbase.hconnection.threads.keepalivetime=300
+#mysql
+mysql.host=localhost
+mysql.port=3306
+mysql.maxPoolSize=20
+mysql.username=username
+mysql.password=password
+mysql.database=notification
+mysql.charset=UTF-8
+mysql.queryTimeout=500
+#store, mysql or hbase
+store.type=mysql
