--- a/xpns-dispatcher/pom.xml
+++ b/xpns-dispatcher/pom.xml
@@ -69,6 +69,26 @@
             <artifactId>hbase-client</artifactId>
             <version>1.4.5</version>
         </dependency>
+        <!-- https://mvnrepository.com/artifact/io.vertx/vertx-jdbc-client -->
+        <dependency>
+            <groupId>io.vertx</groupId>
+            <artifactId>vertx-jdbc-client</artifactId>
+            <version>3.5.3</version>
+        </dependency>
+        <!-- https://mvnrepository.com/artifact/io.vertx/vertx-mysql-postgresql-client -->
+        <dependency>
+            <groupId>io.vertx</groupId>
+            <artifactId>vertx-mysql-postgresql-client</artifactId>
+            <version>3.5.3</version>
+        </dependency>
+        <!-- https://mvnrepository.com/artifact/mysql/mysql-connector-java -->
+        <dependency>
+            <groupId>mysql</groupId>
+            <artifactId>mysql-connector-java</artifactId>
+            <version>8.0.11</version>
+        </dependency>
+
+
 
         <!-- https://mvnrepository.com/artifact/junit/junit -->
         <dependency>
