qps control for consume notification task

--- a/xpns-dispatcher/src/main/resources/app.properties
+++ b/xpns-dispatcher/src/main/resources/app.properties
@@ -11,7 +11,7 @@ kafka.producer.key.serializer=org.apache.kafka.common.serialization.StringSerial
 kafka.producer.value.serializer=org.apache.kafka.common.serialization.StringSerializer
 kafka.producer.acks=1
 kafka.producer.type=async
-#topics]
+#notificationTopics]
 kafka-notification-topic=xpns-notification
 kafka-ack-topic=xpns-ack
 kafka-es-topic=xpns-es
@@ -38,3 +38,5 @@ mysql.charset=UTF-8
 mysql.queryTimeout=500
 #store, mysql or hbase
 store.type=mysql
+#notification
+notification.qps=1000
