--- a/xpns-server-akka/src/main/resources/app.properties
+++ b/xpns-server-akka/src/main/resources/app.properties
@@ -16,7 +16,7 @@ kafka.producer.key.serializer=org.apache.kafka.common.serialization.StringSerial
 kafka.producer.value.serializer=org.apache.kafka.common.serialization.StringSerializer
 kafka.producer.acks=1
 kafka.producer.type=async
-#topics
+#notificationTopics
 kafka-notification-topic=xpns-notification
 kafka-ack-topic=xpns-ack
 kafka-logon-topic=xpns-logon
