--- a/xpns-soa/src/main/resources/app.properties
+++ b/xpns-soa/src/main/resources/app.properties
@@ -4,6 +4,6 @@ kafka.producer.key.serializer=org.apache.kafka.common.serialization.StringSerial
 kafka.producer.value.serializer=org.apache.kafka.common.serialization.StringSerializer
 kafka.producer.acks=1
 kafka.producer.type=async
-#topics
+#notificationTopics
 kafka-notification-topic=xpns-notification
 kafka-es-topic=xpns-es
