qps control for consume notification task

--- a/xpns-es/src/main/resources/app.properties
+++ b/xpns-es/src/main/resources/app.properties
@@ -5,7 +5,7 @@ kafka.consumer.value.deserializer=org.apache.kafka.common.serialization.StringDe
 kafka.consumer.group.id=es-writer
 kafka.consumer.auto.offset.reset=earliest
 kafka.consumer.enable.auto.commit=false
-#notificationTopics
+#topics
 kafka-notification-topic=xpns-notification
 kafka-ack-topic=xpns-ack
 kafka-es-topic=xpns-es
