--- a/xpns-dispatcher/src/main/resources/app.properties
+++ b/xpns-dispatcher/src/main/resources/app.properties
@@ -11,7 +11,7 @@ kafka.producer.key.serializer=org.apache.kafka.common.serialization.StringSerial
 kafka.producer.value.serializer=org.apache.kafka.common.serialization.StringSerializer
 kafka.producer.acks=1
 kafka.producer.type=async
-#notificationTopics]
+#topics
 kafka-notification-topic=xpns-notification
 kafka-ack-topic=xpns-ack
 kafka-es-topic=xpns-es
