optimize the performance of put session info into redis

--- a/xpns-server/src/main/resources/app.properties
+++ b/xpns-server/src/main/resources/app.properties
@@ -9,6 +9,8 @@ server.worker.threads=4
 #redis
 redis.host=127.0.0.1
 redis.port=6379
+redis.clients.max.total=32
+redis.clients.max.idle=8
 redis.password=
 #kafka producer
 kafka.producer.bootstrap.servers=localhost:9092
