--- a/pom.xml
+++ b/pom.xml
@@ -35,7 +35,8 @@
         <netty.version>4.1.24.Final</netty.version>
         <slf4j.version>1.7.25</slf4j.version>
         <logback-classic.version>1.2.3</logback-classic.version>
-        <vertx.version>3.5.2</vertx.version>
+        <vertx.elasticsearch.version>2.3.0</vertx.elasticsearch.version>
+        <vertx.version>3.5.4</vertx.version>
         <zookeeper.version>3.4.11</zookeeper.version>
     </properties>
 
@@ -100,15 +101,22 @@
                 <version>${vertx.version}</version>
             </dependency>
             <dependency>
+                <groupId>com.hubrick.vertx</groupId>
+                <artifactId>vertx-elasticsearch-service</artifactId>
+                <version>${vertx.elasticsearch.version}</version>
+            </dependency>
+            <dependency>
                 <groupId>org.apache.zookeeper</groupId>
                 <artifactId>zookeeper</artifactId>
                 <version>${zookeeper.version}</version>
             </dependency>
+            <!-- https://mvnrepository.com/artifact/org.apache.kafka/kafka-clients -->
             <dependency>
                 <groupId>org.apache.kafka</groupId>
                 <artifactId>kafka-clients</artifactId>
-                <version>0.10.2.1</version>
+                <version>2.1.0</version>
             </dependency>
+
 
         </dependencies>
     </dependencyManagement>
