add netty-explore module

--- a/pom.xml
+++ b/pom.xml
@@ -23,6 +23,7 @@
         <module>xpns-es</module>
         <module>xpns-server-akka</module>
         <module>xpns-bench-soa</module>
+        <module>netty-explore</module>
     </modules>
 
     <properties>
