--- a/xpns-dispatcher/pom.xml
+++ b/xpns-dispatcher/pom.xml
@@ -13,6 +13,10 @@
 
     <dependencies>
         <dependency>
+            <groupId>org.apache.zookeeper</groupId>
+            <artifactId>zookeeper</artifactId>
+        </dependency>
+        <dependency>
             <groupId>com.github.sioncheng</groupId>
             <artifactId>xpns-common</artifactId>
             <version>1.0-SNAPSHOT</version>
